// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complectationOrEquipmentCount показать количество опций, если не указана комплектация 1`] = `
Object {
  "label": "Комплектация",
  "value": "5 опций",
}
`;

exports[`complectationOrEquipmentCount показать комплектацию, если указана комплектация 1`] = `
Object {
  "label": "Комплектация",
  "value": "C 43 4MATIC Особая серия",
}
`;

exports[`engine должен вернуть литры для CARS 1`] = `
Object {
  "label": "Двигатель",
  "linkData": Object {
    "data": Object {
      "displacement": "3.0 л",
      "engineType": "Дизель",
      "power": "224 л.с.",
    },
    "linkName": "listing",
    "linkParams": Object {
      "category": "cars",
      "engine_type": Array [
        "DIESEL",
      ],
      "mark": "KIA",
      "model": "RIO",
      "section": false,
    },
  },
  "value": "3.0 л / 224 л.с. / Дизель",
}
`;

exports[`engine должен вернуть литры для TRUCKS 1`] = `
Object {
  "label": "Двигатель",
  "linkData": Object {
    "data": Object {
      "displacement": "6.0 л",
      "engineType": "",
      "power": "220 л.с.",
    },
    "linkName": "listing",
    "linkParams": Object {
      "category": null,
      "engine_type": Array [
        undefined,
      ],
      "mark": "IVECO",
      "model": "DAILY",
      "section": false,
    },
  },
  "value": "6.0 л / 220 л.с.",
}
`;

exports[`engine должен вернуть литры для TRUCKS, если очень маленькое значение 1`] = `
Object {
  "label": "Двигатель",
  "linkData": Object {
    "data": Object {
      "displacement": "0.04 л",
      "engineType": "",
      "power": "101 л.с.",
    },
    "linkName": "listing",
    "linkParams": Object {
      "category": null,
      "engine_type": Array [
        undefined,
      ],
      "mark": "JCB",
      "model": "4CX",
      "section": false,
    },
  },
  "value": "0.04 л / 101 л.с.",
}
`;

exports[`engine должен вернуть см3 для MOTO 1`] = `
Object {
  "label": "Двигатель",
  "linkData": Object {
    "data": Object {
      "displacement": "1 687 см³",
      "engineType": "Инжектор",
      "power": "",
    },
    "linkName": "listing",
    "linkParams": Object {
      "category": null,
      "engine_type": Array [
        "INJECTOR",
      ],
      "mark": "DUCATI",
      "model": "ST",
      "section": false,
    },
  },
  "value": "1 687 см³ / Инжектор",
}
`;

exports[`для нового авто должен выделить параметр "ПТС" для дубликата 1`] = `
Object {
  "hidden": false,
  "label": "ПТС",
  "selected": true,
  "value": "Дубликат",
}
`;

exports[`для нового авто должен выделить параметр "Руль" для праворульных авто 1`] = `
Object {
  "hidden": false,
  "label": "Руль",
  "selected": true,
  "value": "Правый",
}
`;

exports[`для нового авто должен выделить параметр "Таможня" при значении "Не растаможен" 1`] = `
Object {
  "hidden": false,
  "label": "Таможня",
  "selected": true,
  "value": "Не растаможен",
}
`;

exports[`для нового авто должен спрятать параметр "Обмен" 1`] = `
Object {
  "hidden": true,
  "label": "Обмен",
  "value": "Рассмотрю варианты",
}
`;

exports[`для нового авто должен спрятать параметр "ПТС" для оригинала 1`] = `
Object {
  "hidden": true,
  "label": "ПТС",
  "selected": false,
  "value": "Оригинал",
}
`;

exports[`для нового авто должен спрятать параметр "Пробег" 1`] = `
Object {
  "bold": true,
  "hidden": true,
  "label": "Пробег",
  "value": "новый",
}
`;

exports[`для нового авто должен спрятать параметр "Руль" для леворульных авто 1`] = `
Object {
  "hidden": true,
  "label": "Руль",
  "selected": false,
  "value": "Левый",
}
`;

exports[`для нового авто должен спрятать параметр "Состояние" 1`] = `
Object {
  "hidden": true,
  "label": "Состояние",
  "selected": false,
  "value": "Не требует ремонта",
}
`;

exports[`для нового авто должен спрятать параметр "Таможня" при значении "Растаможен" 1`] = `
Object {
  "hidden": true,
  "label": "Таможня",
  "selected": false,
  "value": "Растаможен",
}
`;
